--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- Logo and Brand Name -->
             <div class="d-flex flex-column align-items-center">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo2.jpg" class="img-fluid" alt="Darna Logo" style="max-width: 150px;">
+                    <img src="img/logo.jpg" class="img-fluid" alt="Darna Logo" style="max-width: 150px;">
                 </a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,8 +34,8 @@
     </nav>
 
     <!-- Zellige and Tea Section (Hero Section) -->
-    <section id="zellige-tea" class="position-relative text-center">
-        <img src="img/image.jpg" class="hero-img mb-3" alt="Moroccan Zellige
+    <section id="zellige-tea" class="position-relative">
+        <img src="img/image.jpg" class="w-100 hero-img" alt="Moroccan Zellige and Tea">
         <div class="hero-overlay text-center">
             <h1 class="display-4 text-white">Experience Moroccan Culture</h1>
             <p class="lead text-white">Immerse yourself in the beauty of Moroccan zellige and tea, paired with our delicious sweets.</p>
@@ -143,7 +143,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card offer-card shadow">
-                    <img src="img/gettyimages-689087120-612x612.jpg" class="card-img-top" alt="Sweet Starter Box">
+                    <img src="img/gettyimages-689087120-612x612.jpg" class="card-img-top img-fluid" alt="Sweet Starter Box" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">Sweet Starter Box</h5>
                         <p class="card-text">10 pieces of mixed Moroccan sweets - $15</p>
@@ -153,7 +153,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card offer-card shadow">
-                    <img src="img/gettyimages-2156187804-612x612.jpg" class="card-img-top" alt="Family Delight Box">
+                    <img src="img/gettyimages-2156187804-612x612.jpg" class="card-img-top img-fluid" alt="Family Delight Box" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">Family Delight Box</h5>
                         <p class="card-text">25 pieces of assorted sweets - $35</p>
@@ -163,7 +163,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card offer-card shadow">
-                    <img src="img/gettyimages-905982748-612x612.jpg" class="card-img-top" alt="Celebration Pack">
+                    <img src="img/gettyimages-905982748-612x612.jpg" class="card-img-top img-fluid" alt="Celebration Pack" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">Celebration Pack</h5>
                         <p class="card-text">50 pieces with free delivery - $60</p>
