--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h5>Golden Platter Sweets</h5>
                         <p>Triangular sweets on a traditional golden platter.</p>
                     </div>
-                </div>
+                </div> 
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#sweetSlideshow" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -162,13 +162,13 @@
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card offer-card shadow">
+                <!-- <div class="card offer-card shadow">
                     <img src="img/gettyimages-905982748-612x612.jpg" class="card-img-top img-fluid" alt="Celebration Pack" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">Celebration Pack</h5>
                         <p class="card-text">50 pieces with free delivery - $60</p>
                         <a href="#contact" class="btn btn-primary">Order Now</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
