--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/gettyimages-905982748-612x612.jpg" class="d-block w-100" alt="Coconut Sweets">
+                    <img src="img/gettyimages-689087120-612x612.jpg" class="d-block w-100" alt="Coconut Sweets">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Coconut Sweets</h5>
                         <p>Soft and sweet coconut-covered treats.</p>
@@ -157,6 +157,16 @@
                     <div class="card-body">
                         <h5 class="card-title">Family Delight Box</h5>
                         <p class="card-text">25 pieces of assorted sweets - $35</p>
+                        <a href="#contact" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card offer-card shadow">
+                    <img src="img/gettyimages-905982748-612x612.jpg" class="card-img-top img-fluid" alt="Celebration Pack" style="height: 200px; object-fit: cover;">
+                    <div class="card-body">
+                        <h5 class="card-title">Celebration Pack</h5>
+                        <p class="card-text">50 pieces with free delivery - $60</p>
                         <a href="#contact" class="btn btn-primary">Order Now</a>
                     </div>
                 </div>
