Update image source for Coconut Sweets in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/gettyimages-905982748-612x612.jpg" class="d-block w-100" alt="Coconut Sweets">
+                    <img src="img/gettyimages-1220760329-612x612.jpg class="d-block w-100" alt="Coconut Sweets">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Golden Platter Sweets</h5>
                         <p>Triangular sweets on a traditional golden platter.</p>
