--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=favorite" />
 </head>
 <body style="background-color: #FFF5EE;">
     <!-- Navigation Bar with Background Image -->
@@ -15,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-absolute top-0 start-0 w-100">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo darna.png" alt="Darna Logo" style="max-width: 350px;">
+                    <img src="img/logo-no-background.png" alt="Darna Logo" style="max-width: 150px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,21 +39,53 @@
                             <a class="nav-link text-light fw-bold" href="#contact" style="color: #FFF;">Contact Us</a>
                         </li>
                     </ul>
-                    <a href="#offers" class="btn btn-sm ms-3" style="background-color: #A0522D; color: #FFF5EE;">Take Action</a>
+                    <a href="#offers" class="btn btn-sm ms-3" style="background-color: #9C7945; color: #FFF5EE;">Take Action</a>
                 </div>
             </div>
         </nav>
-        <div class="d-flex flex-column justify-content-end align-items-center h-100 text-light text-center px-5 pb-5" style="background: rgba(0, 0, 0, 0.6);">
-            <h1 class="mb-4 animated-text" style="font-family: 'Scheherazade New', serif; font-size: 3rem; font-weight: bold; color: #FFF5EE;">Discover the Finest Moroccan Sweets</h1>
-            <p class="mb-4 animated-text" style="font-family: 'Amiri', serif; font-size: 1.2rem; color: #FFF5EE;">Crafted with love and tradition, indulge in the sweetness of Morocco.</p>
-            <a href="#sweets" class="btn btn-lg mt-3 animate-btn" style="background-color: #A0522D; color: #FFF5EE; font-family: 'Scheherazade New', serif; font-size: 1.5rem; padding: 15px 40px; border-radius: 50px;">Explore Now</a>
+        <div class="d-flex flex-column justify-content-end align-items-center h-100 text-light text-center px-5 pb-5" style="background: rgba(0, 0, 0, 0.88);">
+            <h1 class="mb-4 animated-text" style="font-family: Clicker Script; font-size: 5rem; font-weight: bold; color: #9C7945;">Discover the Finest Moroccan Sweets</h1>
+            <p class="mb-4 animated-text" style=" font-size: 1.2rem; color: #9C7945;">Crafted with
+                <span class="material-symbols-outlined" style="color: crimson;">
+                    favorite
+                    </span>
+                    <style>
+                        .material-symbols-outlined {
+                          font-variation-settings:
+                          'FILL' 3,
+                          'wght' 1000,
+                          'GRAD' 0.5,
+                          'opsz' 30
+
+                        }
+         
+                        </style>
+                  and tradition, indulge in the sweetness of Morocco.</p>
+            <a href="#sweets" class="btn btn-lg mt-3 animate-btn" style="color: #FFF5EE;  font-size: 1.5rem; padding: 15px 40px; border-radius: 50px; border: none;">Explore Now</a>
         </div>
     </section>
 
     <style>
-    .animate-btn {
-        transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
-    }
+.animate-btn {
+    background: linear-gradient(90deg, #C8A75C, #9C7945); /* Exact gold gradient from image */
+    color: #FFF5EE;
+    /* font-family: 'Scheherazade New', serif; */
+    font-family: 'Roboto', sans-serif; /* Luxurious handwritten font */
+
+    font-size: 1.5rem;
+    padding: 15px 40px;
+    border-radius: 50px;
+    border: none;
+    text-shadow: 0 0 10px rgba(200, 167, 92, 0.8); /* Soft golden glow */
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+.animate-btn:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px rgba(200, 167, 92, 1);
+    background: linear-gradient(45deg, #9C7945, #C8A75C);
+}
+
     .animate-btn:hover {
         transform: scale(1.1);
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
