Update order links to direct users to WhatsApp for Sweet Starter Box, Family Delight Box, and Celebration Pack

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sweet Starter Box</h5>
                         <p class="card-text">10 pieces of mixed Moroccan sweets - $15</p>
-                        <a href="#contact"  class="btn" style="background-color: #8B4513; color: #FFF5EE;">Order Now</a>
+                        <a href="https://wa.me/212708898226?text=I%20am%20interested%20in%20the%20Sweet%20Starter%20Box%20(10%20pieces%20of%20mixed%20Moroccan%20sweets%20-%20$15)%20from%20user%20{{userName}}" class="btn" style="background-color: #8B4513; color: #FFF5EE;">Order via WhatsApp</a>
                     </div>
                 </div>
             </div>
@@ -243,7 +243,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Family Delight Box</h5>
                         <p class="card-text">25 pieces of assorted sweets - $35</p>
-                        <a href="#contact"  class="btn" style="background-color: #8B4513; color: #FFF5EE;">Order Now</a>
+                        <a href="https://wa.me/212708898226?text=I%20am%20interested%20in%20the%20Family%20Delight%20Box%20(25%20pieces%20of%20assorted%20sweets%20-%20$35)%20from%20user%20{{userName}}" class="btn" style="background-color: #8B4513; color: #FFF5EE;">Order via WhatsApp</a>
                     </div>
                 </div>
             </div>
@@ -253,7 +253,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Celebration Pack</h5>
                         <p class="card-text">50 pieces with free delivery - $60</p>
-                        <a href="#contact" class="btn" style="background-color: #8B4513; color: #FFF5EE; ">Order Now</a>
+                        <a href="https://wa.me/212708898226?text=I%20am%20interested%20in%20the%20Celebration%20Pack%20(50%20pieces%20with%20free%20delivery%20-%20$60)%20from%20user%20{{userName}}" class="btn" style="background-color: #8B4513; color: #FFF5EE;">Order via WhatsApp</a>
                     </div>
                 </div>
             </div>
