--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moroccan Sweets</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=favorite" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=favorite" />
 </head>
 <body style="background-color: #FFF5EE;">
-    <!-- Navigation Bar with Background Image -->
     <section id="landing" class="position-relative" style="background-image: url('img/image (1).jpg'); background-size: cover; background-position: center; height: 100vh;">
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-absolute top-0 start-0 w-100">
             <div class="container">
@@ -30,7 +27,7 @@
                             <a class="nav-link text-light fw-bold" href="#home" style="color: #FFF;">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light fw-bold" href="#sweets" style="color: #FFF;">Offerings</a>
+                            <a class="nav-link text-light fw-bold" href="custom-order.html" style="color: #FFF;">Offerings</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light fw-bold" href="#initiatives" style="color: #FFF;">Initiatives</a>
@@ -48,19 +45,18 @@
             <p class="mb-4 animated-text" style=" font-size: 1.2rem; color: #9C7945;">Crafted with
                 <span class="material-symbols-outlined" style="color: crimson;">
                     favorite
-                    </span>
-                    <style>
-                        .material-symbols-outlined {
-                          font-variation-settings:
-                          'FILL' 3,
-                          'wght' 1000,
-                          'GRAD' 0.5,
-                          'opsz' 30
+                </span>
+                <style>
+                    .material-symbols-outlined {
+                        font-variation-settings:
+                        'FILL' 3,
+                        'wght' 1000,
+                        'GRAD' 0.5,
+                        'opsz' 30
 
-                        }
-         
-                        </style>
-                  and tradition, indulge in the sweetness of Morocco.</p>
+                    }
+                </style>
+                and tradition, indulge in the sweetness of Morocco.</p>
             <a href="#sweets" class="btn btn-lg mt-3 animate-btn" style="color: #FFF5EE;  font-size: 1.5rem; padding: 15px 40px; border-radius: 50px; border: none;">Explore Now</a>
         </div>
     </section>
@@ -112,7 +108,6 @@
         });
     });
     </script>
-    <!-- Slideshow Section (Centered with Shadow) -->
     <section id="home" class="container col-md-7 my-5">
         <div id="sweetSlideshow" class="carousel slide shadow-lg" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -180,12 +175,12 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/gettyimages-1220760329-612x612.jpg class="d-block w-100" alt="Coconut Sweets">
+                    <img src="img/gettyimages-1220760329-612x612.jpg" class="d-block w-100" alt="Coconut Sweets">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Golden Platter Sweets</h5>
                         <p>Triangular sweets on a traditional golden platter.</p>
                     </div>
-                </div> 
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#sweetSlideshow" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -197,70 +192,52 @@
             </button>
         </div>
     </section>
-
-    <!-- Sweets Section (Enhanced with Image and Text Alignment) -->
-    <section id="sweets" class="container my-5">
-        <h2 class="text-center text-danger mb-5" style="font-family: 'Georgia', serif;">Our Sweets</h2>
-        <div class="row align-items-center mb-5">
-            <div class="col-md-6">
-                <img src="img/gettyimages-689087120-612x612.jpg" class="img-fluid rounded shadow" alt="Sweet Image">
-            </div>
-            <div class="col-md-6 text-center">
-                <h3 class="fw-bold" style="font-family: 'Georgia', serif;">We're sweet for you.</h3>
-                <p style="font-family: 'Georgia', serif;">Discover the art of Moroccan sweets.</p>
-                <a href="#offers" class="btn btn-custom" style="font-family: 'Georgia', serif;">Learn More</a>
-            </div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col-md-6 order-md-2">
-                <img src="img/gettyimages-2156187804-612x612.jpg" class="img-fluid rounded shadow" alt="Sweet Image">
-            </div>
-            <div class="col-md-6 order-md-1 text-center">
-                <h3 class="fw-bold" style="font-family: 'Georgia', serif;">Ready to take the next step?</h3>
-                <p style="font-family: 'Georgia', serif;">Indulge in goodness worth sharing.</p>
-                <a href="#offers" class="btn btn-custom" style="font-family: 'Georgia', serif;">Take Action</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Offers Section (With Images and Buttons) -->
-    <section id="offers" class="container my-5">
-        <h2 class="text-center text-danger mb-5">Special Offers</h2>
-        <div class="row">
-            <div class="col-md-4 mb-4">
-                <div class="card offer-card shadow">
-                    <img src="img/gettyimages-689087120-612x612.jpg" class="card-img-top img-fluid" alt="Sweet Starter Box" style="height: 200px; object-fit: cover;">
-                    <div class="card-body">
-                        <h5 class="card-title">Sweet Starter Box</h5>
-                        <p class="card-text">10 pieces of mixed Moroccan sweets - $15</p>
-                        <a href="#" class="btn order-btn" style="background-color: #8B4513; color: #FFF5EE;" data-product="Sweet Starter Box" data-description="10 pieces of mixed Moroccan sweets" data-price="$15">Order via WhatsApp</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card offer-card shadow">
-                    <img src="img/gettyimages-2156187804-612x612.jpg" class="card-img-top img-fluid" alt="Family Delight Box" style="height: 200px; object-fit: cover;">
-                    <div class="card-body">
-                        <h5 class="card-title">Family Delight Box</h5>
-                        <p class="card-text">25 pieces of assorted sweets - $35</p>
-                        <a href="#" class="btn order-btn" style="background-color: #8B4513; color: #FFF5EE;" data-product="Family Delight Box" data-description="25 pieces of assorted sweets" data-price="$35">Order via WhatsApp</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card offer-card shadow">
-                    <img src="img/gettyimages-905982748-612x612.jpg" class="card-img-top img-fluid" alt="Celebration Pack" style="height: 200px; object-fit: cover;">
-                    <div class="card-body">
-                        <h5 class="card-title">Celebration Pack</h5>
-                        <p class="card-text">50 pieces with free delivery - $60</p>
-                        <a href="#" class="btn order-btn" style="background-color: #8B4513; color: #FFF5EE;" data-product="Celebration Pack" data-description="50 pieces with free delivery" data-price="$60">Order via WhatsApp</a>
-                    </div>
+<section id="offers" class="container my-5">
+    <h2 class="text-danger text-center mb-5">Special Offers</h2>
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card offer-card shadow">
+                <img src="img/gettyimages-689087120-612x612.jpg" class="card-img-top img-fluid" alt="Sweet Starter Box" style="height: 200px; object-fit: cover;">
+                <div class="card-body">
+                    <h5 class="card-title">Sweet Starter Box</h5>
+                    <p class="card-text">10 pieces of mixed Moroccan sweets - $15</p>
+                    <a href="#" class="btn order-btn" style="background-color: #8B4513; color: #FFF5EE;" 
+                        data-product="Sweet Starter Box" data-description="10 pieces of mixed Moroccan sweets" data-price="$15">
+                        Order via WhatsApp
+                    </a>
                 </div>
             </div>
         </div>
-    </section>
+        <div class="col-md-4 mb-4">
+            <div class="card offer-card shadow">
+                <img src="img/gettyimages-2156187804-612x612.jpg" class="card-img-top img-fluid" alt="Family Delight Box" style="height: 200px; object-fit: cover;">
+                <div class="card-body">
+                    <h5 class="card-title">Family Delight Box</h5>
+                    <p class="card-text">25 pieces of assorted sweets - $35</p>
+                    <a href="#" class="btn order-btn" style="background-color: #8B4513; color: #FFF5EE;" 
+                        data-product="Family Delight Box" data-description="25 pieces of assorted sweets" data-price="$35">
+                        Order via WhatsApp
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card offer-card shadow">
+                <img src="img/gettyimages-905982748-612x612.jpg" class="card-img-top img-fluid" alt="Celebration Pack" style="height: 200px; object-fit: cover;">
+                <div class="card-body">
+                    <h5 class="card-title">Celebration Pack</h5>
+                    <p class="card-text">50 pieces with free delivery - $60</p>
+                    <a href="#" class="btn order-btn" style="background-color: #8B4513; color: #FFF5EE;" 
+                        data-product="Celebration Pack" data-description="50 pieces with free delivery" data-price="$60">
+                        Order via WhatsApp
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-    <script>
+<script>
 document.addEventListener("DOMContentLoaded", () => {
     const orderButtons = document.querySelectorAll(".order-btn");
 
@@ -273,7 +250,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
             // Headers for Infobip API
             const myHeaders = new Headers();
-            myHeaders.append("Authorization", "App ae815067195972f8b7177e83691d79f5-51e8a722-2b0c-4e4f-832e-9673e0ba75a1");
+            myHeaders.append("Authorization", "App 0792900cad2255f83c9603ceea3ff489-6eb85b6d-fb6f-46b1-972a-87da576aad5a");
             myHeaders.append("Content-Type", "application/json");
             myHeaders.append("Accept", "application/json");
 
@@ -281,14 +258,14 @@ document.addEventListener("DOMContentLoaded", () => {
             const raw = JSON.stringify({
                 "messages": [
                     {
-                        "from": "447860099299",  // Your WhatsApp Business Number
-                        "to": "212708898226",  // Customer's Number
-                        "messageId": "5ec1c68e-3a04-4e55-94af-6d58d95a464e",
+                        "from": "447860099299",  // Your WhatsApp Business Number (DOIT ÊTRE APPROUVÉ PAR INFOBIP)
+                        "to": "212708898226",  // Numéro du client (DOIT ÊTRE SUR WHATSAPP)
+                        "messageId": Math.random().toString(36).substring(7), // Générer un ID unique
                         "content": {
-                            "templateName": "test_whatsapp_template_en",
+                            "templateName": "test_whatsapp_template_en", // Assure-toi que ce template est approuvé
                             "templateData": {
                                 "body": {
-                                    "placeholders": [product, description, price] // Dynamic placeholders
+                                    "placeholders": [product, description, price] // Placeholders dynamiques
                                 }
                             },
                             "language": "en"
@@ -308,37 +285,41 @@ document.addEventListener("DOMContentLoaded", () => {
             try {
                 const response = await fetch("https://v3d9de.api.infobip.com/whatsapp/1/message/template", requestOptions);
                 const result = await response.json();
-                console.log("WhatsApp API Response:", result);
-                alert("Order sent successfully via WhatsApp Business!");
+
+                if (!response.ok) {
+                    console.error("Erreur API:", result);
+                    alert("Échec de l'envoi : " + (result.requestError ? result.requestError.serviceException.text : "Erreur inconnue"));
+                } else {
+                    console.log("Réponse API:", result);
+                    alert("Commande envoyée avec succès via WhatsApp !");
+                }
             } catch (error) {
-                console.error("WhatsApp API Error:", error);
-                alert("Failed to send order.");
+                console.error("Erreur JavaScript:", error);
+                alert("Une erreur s'est produite.");
             }
         });
     });
 });
+</script>
+    <section id="sweets">
+    <div class="container my-5">
+        <h2 class="text-danger text-center mb-5">Our Sweets</h2>
+        <div class="row" id="sweets-list">
+            </div>
+    </div>
+</section>
 
-    </script>
-    <section id="home">...</section>
-    <section id="sweets">...</section>
-    <section id="offers">...</section>
-    <section id="contact">...</section>
-
-    <!-- Contact Section -->
     <section id="contact" class="container text-center my-5">
         <h2 class="text-danger">Contact Us</h2>
         <p>Email: info@moroccansweets.com</p>
     </section>
 
-    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <p>© 2025 Moroccan Sweets. All rights reserved.</p>
     </footer>
 
-    <!-- Bootstrap JS and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
 </html>
